--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,17 +35,34 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.20
+  permission_handler: ^10.2.0
+  http: ^0.13.4
+  carousel_slider: ^4.2.1
+  share_files_and_screenshot_widgets:
+  cached_network_image:
+  image_gallery_saver: ^1.7.1
+  # For state management, UI update and other things
+  get: ^4.6.5
+
+  # For API calling
+  dio: ^5.1.2
+
+  # Database
+  objectbox: ^2.0.0
+  objectbox_flutter_libs: any
+
+  video_player: ^2.7.0
+
+  path_provider: ^2.0.15
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.5
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,9 +76,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
